--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "thinkcmf/cmf-api",
+    "name": "oyswonder/cmf-api",
     "description": "The ThinkCMF 5.1 Core Api Package",
     "license": "Apache-2.0",
     "authors": [
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "thinkcmf/cmf": "~5.1.0"
+        "oyswonder/cmf": "~5.1.0"
     },
     "autoload": {
         "psr-4": {
